force-app/main/default/objects/VN_LogBatch__c/VN_LogBatch__c.object-meta.xml
<CustomObject>
    <label>Log Batch</label>
    <nameField>
        <displayFormat>Log - {00000000}</displayFormat>
        <label>Nome de Log Batch</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>