force-app/main/default/objects/VN_LogBatch__c/fields/V_ErroResultado__c.field-meta.xml
<CustomField>
    <fullName>V_ErroResultado__c</fullName>
    <label>Erro Resultado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>