force-app/main/default/objects/VN_LogBatch__c/fields/V_IdBatch__c.field-meta.xml
<CustomField>
    <fullName>V_IdBatch__c</fullName>
    <label>Id Batch</label>
    <length>18</length>
    <type>Text</type>
</CustomField>