force-app/main/default/objects/VN_LogBatch__c/fields/V_Processo__c.field-meta.xml
<CustomField>
    <fullName>V_Processo__c</fullName>
    <label>Processo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>