force-app/main/default/objects/VN_LogBatch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>V_ErroResultado__c</columns>
    <columns>V_IdBatch__c</columns>
    <columns>V_Processo__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>